# app_procesamiento

./: .gitignore  Nuevo documento de texto.txt  README.md  app.py  flujo.md  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml  secrets.example.toml
app_procesamiento/: README.md  __init__.py  config.py  finalizar_calificaciones.py  limpiar_calificaciones.py  preparar_calificaciones.py  procesar_microlearning.py  procesar_mooc.py  procesar_videoconferencia.py
app_procesamiento/core/: __init__.py  certificados.py  columnas.py  diagnosticos.py  dialogos.py  entidades.py  errores_match_no.py  finalizacion_calificaciones.py  google_sheets.py  lectores.py  limpieza_calificaciones.py  limpieza_laboral.py  mapeos.py  procesamiento_actividades.py  transformaciones.py  utils.py
