[project]
name = "app-procesamiento"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "authlib>=1.3.2",
    "google-api-python-client>=2.196.0",
    "google-auth>=2.53.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "httpx>=0.28.1",
    "openpyxl>=3.1.5",
    "streamlit>=1.57.0",
]
