[project]
name = "app-procesamiento"
version = "0.1.0"
description = "App Streamlit para procesamiento OECE"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "streamlit[auth]==1.56.0",
    "authlib==1.6.11",
    "pandas>=2.2,<3",
    "numpy>=1.26,<3",
    "openpyxl>=3.1,<4",
    "google-api-python-client>=2.120,<3",
    "google-auth>=2.29,<3",
    "google-auth-httplib2>=0.2,<1",
    "google-auth-oauthlib>=1.2,<2",
    "httpx>=0.27,<1",
]
